--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.26.1",
     "@clerk/themes": "^2.2.29",
-    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
